# nup2023networks

./: .gitignore  README.md  tls_client.py
bcast/: Cargo.toml  Makefile  bchat.c  bchat.py
bcast/src/: main.rs
echat/: Makefile  README.md  echat-echo.c  echat-getflag.c  echat-server.c  lib.c  lib.h
exam/: Cargo.toml  README.md  readme.md  task01.md  task02.armmac  task02.linux  task02.md  task02.x64mac  task03.armmac  task03.linux  task03.md  task03.x64mac  task06.armmac  task06.linux  task06.md  task06.x64mac
exam/0_keygen/: Cargo.toml
exam/0_keygen/src/: main.rs
exam/0_keyset/: Cargo.toml
exam/0_keyset/src/: main.rs
exam/0_writeflag/: Cargo.toml
exam/0_writeflag/src/: main.rs
exam/1_trafficgen/: Cargo.toml
exam/1_trafficgen/src/: main.rs
exam/2_dns/: Cargo.toml
exam/2_dns/src/: main.rs
exam/3_http/: .gitignore  Cargo.toml
exam/3_http/src/: main.rs
exam/4_tcp/: Cargo.toml
exam/4_tcp/src/: main.rs
exam/5_wifigen/: Cargo.toml
exam/5_wifigen/src/: main.rs
exam/6_tls/: Cargo.toml
exam/6_tls/src/: main.rs
exam/7_rev/: Cargo.toml  PROTOCOL.md  solver.c
exam/7_rev/src/: main.rs
exam/scripts/: gen_id.py  init.sh  task1gen.sh  task2gen.sh  task3gen.sh  task4gen.sh  task5gen.sh  task6gen.sh  task7gen.sh
infra/: nft.conf  nginx.flags.conf
infra/bgp/: 200.conf  bird.conf
infra/ctfd/: supervisord.conf
infra/ctfd/models/: __init__.py
infra/ctfd/plugins/flags/: __init__.py
infra/ctfd/plugins/flags/assets/exam/: edit.html
infra/home/tasks/: super_1.py  super_3.py  supervisord.conf  task1.py  task2.py  task3.py  task4.py
infra/nginx.ssl/: signca.crt  signca.key
infra/nginx.ssl/cli/: newkey.crt  newkey.csr  newkey.key
infra/openvpn/: ca.crt  ca.key  last_hw.conf  last_hw1.conf  params.pem  server.crt  server.csr  server.key
infra/wireguard/: cpr.conf  gen.sh  priv_key  pub_key
infra/wireguard/configs/: 200.conf  200.key  200.pub  201.conf  201.key  201.pub  202.conf  202.key  202.pub  203.conf  203.key  203.pub  204.conf  204.key  204.pub  205.conf  205.key  205.pub  206.conf  206.key  206.pub  207.conf  207.key  207.pub  208.conf  208.key  208.pub
lab3/: _helpers.py  tcp.c  tcp.py  udp.c  udp.py
lab3/server/: udp_server.c
labs/lab1/: bchat.py
labs/lab1/src/: main.rs
labs/lab3/: tcp.c  tcp.py  udp.c
labs/lab3/server/: tcp_server.c
lessons/l1/: Homework.md  Summary.md
lessons/l2/: Summary.md
lessons/l3/: Labs.md  Summary.md  nginx.conf
smtp/: Cargo.toml
smtp/src/: main.rs
spyware-rs/: Cargo.toml
spyware-rs/src/: main.rs
tcpb/: Makefile  client.c  config.h  tcpbs.c
vpn/: README.md  cli_udp_f.py  client.py  client2.py  client_full.py  client_tcp.py  client_udp.py  proto.py  requirements.txt  server.py  session.pcap  test_proto.py
xhttp/: Cargo.toml  README.md  r1  req  req2  req2txt.py  s1.sh  txt2req.py
xhttp/src/: main.rs  xproto.rs
