[package]
name = "bcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
etherparse = "0.13.0"
mac_address = "1.1.5"
pcap = { version = "1.1.0", features = ["etherparse", "tokio"] }
tokio = { version = "1.33.0", features = ["full"] }
