[package]
name = "spyware-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "1.1.2"
rpm = "0.13.1"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
rand = { version = "0.8.5", features = [] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["rustls-tls", "tokio-rustls", "hyper-rustls"], default-features = false }
