[package]
name = "xhttpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
http-body-util = "0.1.0-rc.3"
pin-project = "1.1.3"
