[package]
name = "keygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blowfish = "0.9.1"
byteorder = { version = "1.5.0", features = [] }
cipher = { version = "0.4.4", features = ["block-padding", "alloc"] }
clap = { version = "4.4.11", features = ["derive"] }
rand = "0.8.5"
