[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { path = "deps/hyper-1.1.0", features = ["http1", "server",] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
hyper-util = { version = "0.1.2", features = ["full"], path = "deps/hyper-util-0.1.2" }
http-body-util = "0.1.0"
blowfish = "0.9.1"
cipher = { version = "0.4.4", features = ["block-padding", "alloc"] }
byteorder = "1.5.0"