[package]
name = "wifi_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.11", features = ["derive"] }
etherparse = "0.13.0"
pcap = { version = "1.1.0", features = ["all-features"] }
pcap-file = "2.0.0"
rand = "0.8.5"
rc4 = "0.1.0"
const-crc32 = "1.3.0"
anyhow = "1"